Add support for clearing Kafka topics
