# src/sms/ports/inbound/events_handler.py
@@ -1,0 +1,33 @@
+# Copyright 2021 - 2024 Universität Tübingen, DKFZ, EMBL, and Universität zu Köln
+# for the German Human Genome-Phenome Archive (GHGA)
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+
+"""Defines the API of a class that interfaces between inbound requests and kafka."""
+
+from abc import ABC, abstractmethod
+
+
+class EventsHandlerPort(ABC):
+    """A class to manage the state of kafka events."""
+
+    @abstractmethod
+    async def clear_topics(
+        self, *, topics: str | list[str], exclude_internal: bool = True
+    ):
+        """Clear messages from given topic(s).
+
+        If no topics are specified, all topics will be cleared, except internal topics
+        unless otherwise specified.
+        """
+        ...
